<resources>
    <string name="app_name">WomenSecurity</string>
    <string name="google_map_api_key">AIzaSyC1uMbDWYK6aaFPdiT9Fp1KsHwMPNJ96d4</string>

    <string name="open_nav_drawer">Open navigation drawer</string>
    <string name="close_nav_drawer">Close navigation drawer</string>
    <string name="alert">Alert</string>
    <string name="map">Map</string>
    <string name="police_station">Police Station</string>
    <string name="railway_station">Railway Station</string>
    <string name="airport">Airport</string>
    <string name="mall">Mall</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="trusted_person">Trusted Person</string>
    <string name="contact_us">Contact Us</string>
    <string name="share_app">Share App</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
</resources>