<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:fitsSystemWindows="true"
    tools:context=".action_screen">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/map_actionScreen"
            tools:context=".MapsActivity"
            android:name="com.google.android.gms.maps.SupportMapFragment" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:elevation="10dp"
            android:background="@drawable/white_border"
            android:id="@+id/relLayout1">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:elevation="4dp"
                android:theme="@style/MyDarkToolbarStyle"
                app:popupTheme="@style/MyDarkToolbarStyle" />


            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toEndOf="@+id/toolbar"
                android:layout_marginStart="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/policeStationBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:padding="10dp"
                        android:background="@drawable/button_background"
                        android:text="@string/police_station"/>

                    <Button
                        android:id="@+id/railwayStationBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:background="@drawable/button_background"
                        android:padding="10dp"
                        android:text="@string/railway_station"/>

                    <Button
                        android:id="@+id/AirportBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:background="@drawable/button_background"
                        android:padding="10dp"
                        android:text="@string/airport"/>

                    <Button
                        android:id="@+id/MallBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:background="@drawable/button_background"
                        android:padding="10dp"
                        android:text="@string/mall"/>

                </LinearLayout>

            </HorizontalScrollView>

        </RelativeLayout>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/relLayout1"
            android:scaleType="centerCrop"
            android:id="@+id/action_screen_gps_icon"
            android:src="@drawable/ic_gps"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:padding="10dp">

        <Button
            android:id="@+id/alertButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/alert"/>

        <TextView
            android:id="@+id/locationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/alertButton"/>

        <Button
            android:id="@+id/mapButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:text="@string/map"/>


    </RelativeLayout>



</androidx.drawerlayout.widget.DrawerLayout>













